fix: make css align

--- a/src/components/MathGame.css
+++ b/src/components/MathGame.css
@@ -37,7 +37,7 @@ h1 {
   color: #888e5f;
   padding: 11px;
   position: absolute;
-  right: 11px;
+  right: 55px;
   box-shadow: 0px 4px #9da853;
 }
 
@@ -128,7 +128,7 @@ h1 {
 }
 
 #timeremaining {
-  width: 180px;
+  width: 135px;
   padding: 10px;
   position: absolute;
   top: 395px;
